<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnSpotifyStreamer"
        android:text="@string/spotify_streamer"
        android:layout_below="@+id/textView"
        style="@style/Button"/>

    <Button
        android:id="@+id/btnScoreApp"
        android:text="@string/score_app"
        android:layout_below="@+id/btnSpotifyStreamer"
        style="@style/Button"/>

    <Button
        android:id="@+id/btnLibraryApp"
        android:text="@string/library_app"
        android:layout_below="@+id/btnScoreApp"
        style="@style/Button"/>

    <Button
        android:id="@+id/btnBuildItBigger"
        android:text="@string/build_it_bigger"
        android:layout_below="@+id/btnLibraryApp"
        style="@style/Button"/>

    <Button
        android:id="@+id/btnXyzReader"
        android:text="@string/xyz_reader"
        android:layout_below="@+id/btnBuildItBigger"
        style="@style/Button"/>

    <Button
        android:id="@+id/btnMyOwnApp"
        android:text="@string/my_own_app"
        android:layout_below="@+id/btnXyzReader"
        android:background="@color/colorButtonSecondary"
        style="@style/Button"
        android:onClick="sendMessage"/>


</RelativeLayout>